--- a/script.qmd
+++ b/script.qmd
@@ -5,6 +5,14 @@ author: "Claudiu Forgaci"
 date: "20 March 2024"
 format: html
 toc: true
+include-in-header:
+  - text: |
+      <style>
+      .cell-output-stdout code {
+        word-break: break-wor !important;
+        white-space: pre-wrap !important;
+      }
+      </style>
 ---
 
 ::: callout-note
@@ -241,6 +249,10 @@ words_count <- words |>
 wordcloud::wordcloud(words$word, min.freq = 50)
 ```
 
+## Interpretation
+
+In important final step of topic modeling is the interpretation of the results. This is a step that requires you, the person conducting the analysis, to qualitatively describe the topics. This boils down to naming the topics and describing them. The pseudo-naming we used so far is an automated way to give an idea of what each topic is about, but we might want to further abstract those to overarching topics. This can be straightforward for some topics and challenging for others.Large Language Models like ChatGPT are very suitable for such a task. We will use the free version (3.5) of ChatGPTY with a prompt generated below using the parameters set in this document. Run the code below and copy/paste its output in a new chat in ChatGPT.
+
 ```{r prompt}
 keywords <- vector(length = k)
 for (i in 1:k) {
@@ -248,25 +260,29 @@ for (i in 1:k) {
 }
 
 cat(paste0("I have ", k, " topics, each described by ", n_words, 
-             " words. The keywords are as follows:\n"))
-cat(keywords, sep = "")
-cat("How would you name these topics? Use maximum two words to name the topics and provide a one-sentence description for each.")
-
+             " words. The keywords are as follows:\n"),
+    keywords, "How would you name these topics? Use maximum two words to name the topics and provide a one-sentence description for each.",
+    sep = "")
 ```
+Run the next code chunk to see a variant of ChatGPT's answer to our prompt. This will be slightly different from the answer you get from ChatGPT, but it is unlikely that it is too different.
 
-```{r answer, eval=FALSE}
+::: {.callout-note}
+The code below (not run) was used to access the ChatGPT API from R, which is a paid service with an account on the [OpenAI Platform](https://platform.openai.com/). Using [the web version of ChatGPT 3.5](https://chat.openai.com/) is free and sufficient for this task.
+:::
+
+```{r answer}
 # # Submit request to ChatGPT
 # answer = create_chat_completion(
 #   model = "gpt-3.5-turbo",
 #   messages = list(
 #     list(
 #       "role" = "user",
-#       "content" = "I have 5 topics, each described by 10 words. The keywords are as follows:
-# - The words for Topic 1 are: nitrogen emissions nature farmers permit government policy province space percent.
-# - The words for Topic 2 are: water soil energy level time country groundwater storage start remkes.
-# - The words for Topic 3 are: service delivery dutch opinion hours protests share family minister archive.
-# - The words for Topic 4 are: nature biodiversity land aerius species restoration carbon natural piece ecological.
-# - The words for Topic 5 are: farmers agriculture european agricultural time farmer food farming green week.
+#       "content" = "I have 5 topics, each described by 5 words. The keywords are as follows:
+# - The words for Topic 1 are: nitrogen emissions nature farmers permit.
+# - The words for Topic 2 are: water soil energy level time.
+# - The words for Topic 3 are: service delivery dutch opinion hours.
+# - The words for Topic 4 are: nature biodiversity land aerius species.
+# - The words for Topic 5 are: farmers agriculture european agricultural time.
 # How would you name these topics? Use maximum two words to name the topics and provide a one-sentence description for each."
 #     )
 #   )
@@ -274,10 +290,16 @@ cat("How would you name these topics? Use maximum two words to name the topics a
 
 # Display answer
 # cat(answer$choices$message.content)
-cat("1. Environmental Policy - Government regulations on nitrogen emissions and space allocation for farmers.\n2. Water Management - Strategies for conserving soil, energy, and groundwater resources over time.\n3. Public Services - Dutch minister's response to protests on service delivery hours.\n4. Biodiversity Conservation - Efforts to restore natural habitats and protect diverse species.\n5. Sustainable Agriculture - European farmers' commitment to green practices for food production.")
+cat("1. Environmental Impact: Nitrogen emissions, nature, farmers, permit - Discussing the environmental impact of nitrogen emissions on nature and the role of farmers in obtaining permits.
+2. Resource Management: Water, soil, energy level, time - Exploring strategies for managing resources efficiently, including water, soil, and energy, within the constraints of time.
+3. Public Services: Service delivery, Dutch opinion, hours - Analyzing public service delivery based on Dutch opinion and the impact of working hours.
+4. Biodiversity Conservation: Nature, biodiversity, land Aerius, species - Addressing the conservation of biodiversity in nature, land Aerius, and various species.
+5. European Agriculture: Farmers, agriculture, European, agricultural time - Evaluating the role of farmers in European agriculture and the necessary time investment for sustainable practices.")
 ```
 
-```{r ldavis}
+LDAvis is a package that can generate interactive visualisation of the topics in a topic model. Running this code chunk will open a browser window that allows you to explore topic-level top words as well as the relevance of individual words across topics.
+
+```{r ldavis, eval=FALSE}
 # Function to approximate the distance between topics
 svd_tsne <- function(x) tsne::tsne(svd(x)$u)
 
@@ -295,3 +317,26 @@ json <- createJSON(
 # Visualise topics model with LDAvis
 LDAvis::serVis(json)
 ```
+
+## Now it's your turn!
+
+### Tweaking the parameters
+First, try tweaking the parameters used in this report, by changing the value of `k` (number of topics) on line 222 and `n_words` (number of words to be included in pseudonaming the topics) on line 233. Then paste the newly generated prompt into ChatGPT. Does the answer make sense? If needed continue the conversation with ChatGPT to refine its answers.
+
+Note: whenever you make a change in this document, you need to run all code chunks in this document in sequence, from top to bottom.
+
+### Working with your data
+Now, if the method and workflow are clear, you are ready to run the document on your data. You do that as follows:  
+
+1. Update the value of `data_choice` from `"nrc"` to `"mydata"`
+
+2. Make sure you have a set of PDFs written in English ready to be used for topic modeling.
+
+3. Create a zip archive of those PDF files.
+
+4. In the files tab of RStudio, click on upload. Navigate to the target directory 
+`~/mint2324Q3U/data/mydata`, click on `Choose File` to select the zipped archive 
+you created and click on `OK`.
+
+5. Run the code chunks in this document from top to bottom to see the results of your analysis.
+
