--- a/script.qmd
+++ b/script.qmd
@@ -31,7 +31,7 @@ In this workshop, we will work in a computational notebook, an environment that 
 
 ![](fig/rstudio.png)
 
-4.  For our analysis, we will need to load a number of R packages that extend the out-of-the-box functionality of R. Run the code chunk below by pressing on the green arrow in its upper right corner. If this is the first time you run the script, it will take a couple of minutes until all packages are installed. 
+4.  For our analysis, we will need to load a number of R packages that extend the out-of-the-box functionality of R. Run the code chunk below by pressing on the green arrow in its upper right corner. If this is the first time you run the script, it will take a couple of minutes until all packages are installed.
 
 ```{r setup, message=FALSE}
 # Install packages
@@ -264,9 +264,10 @@ cat(paste0("I have ", k, " topics, each described by ", n_words,
     keywords, "How would you name these topics? Use maximum two words to name the topics and provide a one-sentence description for each.",
     sep = "")
 ```
+
 Run the next code chunk to see a variant of ChatGPT's answer to our prompt. This will be slightly different from the answer you get from ChatGPT, but it is unlikely that it is too different.
 
-::: {.callout-note}
+::: callout-note
 The code below (not run) was used to access the ChatGPT API from R, which is a paid service with an account on the [OpenAI Platform](https://platform.openai.com/). Using [the web version of ChatGPT 3.5](https://chat.openai.com/) is free and sufficient for this task.
 :::
 
@@ -321,22 +322,21 @@ LDAvis::serVis(json)
 ## Now it's your turn!
 
 ### Tweaking the parameters
+
 First, try tweaking the parameters used in this report, by changing the value of `k` (number of topics) on line 222 and `n_words` (number of words to be included in pseudonaming the topics) on line 233. Then paste the newly generated prompt into ChatGPT. Does the answer make sense? If needed continue the conversation with ChatGPT to refine its answers.
 
 Note: whenever you make a change in this document, you need to run all code chunks in this document in sequence, from top to bottom.
 
 ### Working with your data
-Now, if the method and workflow are clear, you are ready to run the document on your data. You do that as follows:  
 
-1. Update the value of `data_choice` from `"nrc"` to `"mydata"`
+Now, if the method and workflow are clear, you are ready to run the document on your data. You do that as follows:
 
-2. Make sure you have a set of PDFs written in English ready to be used for topic modeling.
+1.  Update the value of `data_choice` from `"nrc"` to `"mydata"`
 
-3. Create a zip archive of those PDF files.
+2.  Make sure you have a set of PDFs written in English ready to be used for topic modeling.
 
-4. In the files tab of RStudio, click on upload. Navigate to the target directory 
-`~/mint2324Q3U/data/mydata`, click on `Choose File` to select the zipped archive 
-you created and click on `OK`.
+3.  Create a zip archive of those PDF files.
 
-5. Run the code chunks in this document from top to bottom to see the results of your analysis.
+4.  In the files tab of RStudio, click on upload. Navigate to the target directory `~/mint2324Q3U/data/mydata`, click on `Choose File` to select the zipped archive you created and click on `OK`.
 
+5.  Run the code chunks in this document from top to bottom to see the results of your analysis.
