--- a/script.qmd
+++ b/script.qmd
@@ -321,15 +321,17 @@ LDAvis::serVis(json)
 
 ## Now it's your turn!
 
-### Tweaking the parameters
+### Tweaking the parameters of the topic model
 
 First, try tweaking the parameters used in this report, by changing the value of `k` (number of topics) on line 222 and `n_words` (number of words to be included in pseudonaming the topics) on line 233. Then paste the newly generated prompt into ChatGPT. Does the answer make sense? If needed continue the conversation with ChatGPT to refine its answers.
 
 Note: whenever you make a change in this document, you need to run all code chunks in this document in sequence, from top to bottom.
 
-### Working with your data
+## Working with your data
 
-Now, if the method and workflow are clear, you are ready to run the document on your data. You do that as follows:
+### Exercise 1. Topic Modeling
+
+Now, if the methods and workflows are clear, you are ready to run the document on your data. You do that as follows:
 
 1.  Update the value of `data_choice` from `"nrc"` to `"mydata"`
 
@@ -340,3 +342,7 @@ Now, if the method and workflow are clear, you are ready to run the document on 
 4.  In the files tab of RStudio, click on upload. Navigate to the target directory `~/mint2324Q3U/data/mydata`, click on `Choose File` to select the zipped archive you created and click on `OK`.
 
 5.  Run the code chunks in this document from top to bottom to see the results of your analysis.
+
+### Exercise 2. Visualising scraped data
+
+You've been scraping data throughout the workshop. Now it is time to visualise it. Follow the steps from the web scraping tutorial to visualise the Facebook or X data you scraped during the workshop in a word cloud. What do you see? How would you describe the discourse of/about farming communities on social media?
